--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ social:
 background:
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:
+google_analytics: UA-77336188-1
 google_verify: z30PUM2U1-NbIf2cG0E7S7lrE_DsrPC9ZRNTIzDNJHw
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
