--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:             # logo visible in the topbar
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
 
-url: #//mmierzwa.github.io
+url: http://byteloom.marek-mierzwa.com
 
 # draw your top menu here
 # each item must have a title and a url.
