--- a/ByteLoomBlog.csproj
+++ b/ByteLoomBlog.csproj
@@ -134,6 +134,8 @@
     <Content Include="_layouts\post.html" />
     <Content Include="_posts\2016-05-07-hello-world.md" />
     <Content Include="_posts\2016-05-08-editing-jekyll-md-in-vs2015.md" />
+    <Content Include="_posts\2016-06-23-enterprise-search-basic-concepts-part-1.md" />
+    <Content Include="_posts\2016-08-18-under-the-hood.md" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="404.md" />
