--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ logo:             # logo visible in the topbar
 # When testing locally leave blank or use http://localhost:4000
 
 url: http://byteloom.marek-mierzwa.com
+feed_url: http://feeds.feedburner.com/Bytel00mBlog
 
 # draw your top menu here
 # each item must have a title and a url.
