--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -5,17 +5,20 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://jpanther.github.io/congo/docs/configuration/#theme-parameters
 
-colorScheme = "congo"
-defaultAppearance = "light" # valid options: light or dark
+colorScheme = "fire"
+defaultAppearance = "dark" # valid options: light or dark
 autoSwitchAppearance = true
 
-enableSearch = false
-enableCodeCopy = false
+enableSearch = true
+enableCodeCopy = true
+
+disqusShortname = "bytel00mbloggithubpages"
+googleAnalytics = "AW-817647716"
 
 # robots = ""
 
 [header]
-  layout = "basic" # valid options: basic, hamburger, hybrid, custom
+  layout = "hybrid" # valid options: basic, hamburger, hybrid, custom
   # logo = "img/logo.jpg"
   showTitle = true
 
@@ -26,9 +29,9 @@ enableCodeCopy = false
   showScrollToTop = true
 
 [homepage]
-  layout = "page" # valid options: page, profile, custom
+  layout = "profile" # valid options: page, profile, custom
   showRecent = false
-  recentLimit = 5
+#  recentLimit = 5
 
 [article]
   showDate = true
@@ -37,7 +40,7 @@ enableCodeCopy = false
   showBreadcrumbs = false
   showDraftLabel = true
   showEdit = false
-  # editURL = "https://github.com/username/repo/"
+  editURL = "https://github.com/mmierzwa/mmierzwa.github.io/"
   editAppendPath = true
   showHeadingAnchors = true
   showPagination = true
@@ -46,12 +49,12 @@ enableCodeCopy = false
   showTableOfContents = false
   showTaxonomies = false
   showWordCount = false
-  showComments = false
-  # sharingLinks = ["facebook", "twitter", "mastodon", "pinterest", "reddit", "linkedin", "email"]
+  showComments = true
+  sharingLinks = ["facebook", "twitter", "mastodon", "reddit", "linkedin"]
 
 [list]
   showBreadcrumbs = false
-  showSummary = false
+  showSummary = true
   showTableOfContents = false
   showTaxonomies = false
   groupByYear = true
@@ -68,7 +71,7 @@ enableCodeCopy = false
   # domain = "llama.yoursite.com"
 
 [verification]
-  # google = ""
-  # bing = ""
+  google = "tIKtPGZmvX3yzfBwbwKqyT-ueu3F4QUgHvLfmrOOMBo"
+  bing = "DFE18A7DA629947848B0673582CE3E86"
   # pinterest = ""
   # yandex = ""
