feat: Updated filenames and post resources

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,4 +13,5 @@ summaryLength = 20
   home = ["HTML", "RSS", "JSON"]
 
 [permalinks]
-  pages = '/:slug/'
+  pages = "/:slug/"
+  posts = "/blog/:filename"
